fix dockerfile, disable jacoco and sonarqube, upgrade gradle